# logistics-delay-prediction

./: .gitignore  README.md  main.py  pyproject.toml
docs/: dataset_design.md  demo.md  model_explainability.md  model_training.md  planning.md  technical_report.md
models/: feature_importance.json  feature_schema.json  metrics.json
src/: explain_model.py  generate_data.py  train_model.py
src/data/: port_data.csv
